@@ -56,6 +56,10 @@ rsync 2.4.7 (sometime in 2001, maybe :)
 
     * Applied "simple nohang patch" from Wayne Davison.
 
+    * For log messages containing ridiculously long strings that might
+      overflow a buffer rsync no longer aborts, but rather prints an
+      ellipsis at the end of the string.  (Patch from Ed Santiago.)
+
   PLATFORMS:
 
     * Improved support for UNICOS (tested on Cray T3E and Cray SV1)
@@ -68,3 +72,4 @@ rsync 2.4.7 (sometime in 2001, maybe :)
     * The existing test.sh script by Phil Hands has been merged into a
       test framework that works from both "make check" and the Samba
       build farm.
+
